ci: use workflow_dispatch instead of push

--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -1,8 +1,8 @@
 name: CI for Linux
 # https://github.com/google/mozc/blob/master/docs/build_mozc_for_linux.md
 
-# Run on push.
-on: push
+# Run on workflow dispatch.
+on: workflow_dispatch
 
 permissions:
   contents: read
