--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -1,8 +1,8 @@
 name: CI for Windows
 # https://github.com/google/mozc/blob/master/docs/build_mozc_in_windows.md
 
-# Run on push.
-on: push
+# Run on workflow dispatch.
+on: workflow_dispatch
 
 permissions:
   contents: read
